# lumi-litellm

./: .gitignore  .pre-commit-config.yaml  .prettierignore  DEVELOPMENT.md  README.md  docker-compose.yml  pyproject.toml  setup_precommit.sh
backend/: .dockerignore  .env.example  Dockerfile  config.py  database.py  main.py  storage.py  test_db_query.py  websocket.py
backend/api/: documents.py  feedback.py  metadata.py  papers.py  queries.py  websockets.py
backend/import_pipeline/: answers.py  answers_script.py  answers_test.py  convert_html_to_lumi.py  convert_html_to_lumi_test.py  convert_list_content.py  convert_lumi_spans.py  fetch_utils.py  fetch_utils_test.py  image_utils.py  image_utils_test.py  import_pipeline.py  import_pipeline_test.py  import_utils.py  latex_inline_command.py  latex_inline_command_test.py  latex_utils.py  latex_utils_script.py  latex_utils_test.py  markdown_utils.py  markdown_utils_test.py  personal_summary.py  personal_summary_script.py  summaries.py  summaries_script.py  summaries_test.py  tokenize.py  tokenize_test.py
backend/llm_models/: extract_concepts.py  llm.py  prompt_answers.py  prompt_concept_extraction.py  prompt_pdf_import.py  prompt_personal_summary.py  prompts.py  prompts_script.py
backend/models/: __init__.py  document.py
backend/scripts/: reset_db.sh
backend/services/: import_service.py
backend/shared/: api.py  import_tags.py  json_utils.py  json_utils_test.py  lumi_collection.py  lumi_doc.py  prompt_utils.py  prompt_utils_test.py  string_utils.py  string_utils_test.py  types.py  types_local_storage.py  utils.py  utils_test.py
backend/utils/: init_schema.py  surreal_utils.py
frontend/: declaration.d.ts  tsconfig.json  web-test-runner.config.mjs  webpack.config.ts  wtr-scss-plugin.mjs
frontend/.storybook/: _storybook_global_styles.scss  main.ts  preview.ts
frontend/src/: app.scss  app.ts  index.ts  service_provider.ts
frontend/src/components/answer_highlight_tooltip/: answer_highlight_tooltip.scss  answer_highlight_tooltip.ts
frontend/src/components/banner/: banner.scss  banner.ts
frontend/src/components/concept_tooltip/: concept_tooltip.scss  concept_tooltip.ts
frontend/src/components/dialogs/: dialogs.ts
frontend/src/components/floating_panel_host/: floating_panel_host.scss  floating_panel_host.ts
frontend/src/components/footnote_tooltip/: footnote_tooltip.scss  footnote_tooltip.ts
frontend/src/components/gallery/: home_gallery.scss  home_gallery.ts
frontend/src/components/header/: header.scss  header.ts
frontend/src/components/info_tooltip/: info_tooltip.scss  info_tooltip.ts
frontend/src/components/light_mobx_lit_element/: light_mobx_lit_element.ts
frontend/src/components/loading_document/: loading_document.scss  loading_document.ts
frontend/src/components/lumi_concept/: lumi_concept.scss  lumi_concept.ts  lumi_concept_contents.scss  lumi_concept_contents.ts
frontend/src/components/lumi_content/: lumi_content.scss  lumi_content.ts  lumi_html_figure_content.scss  lumi_html_figure_content.ts  lumi_html_figure_utils.test.ts  lumi_html_figure_utils.ts  lumi_image_content.scss  lumi_image_content.ts
frontend/src/components/lumi_doc/: content_summary.scss  content_summary.ts  lumi_abstract.scss  lumi_abstract.ts  lumi_doc.scss  lumi_doc.test.ts  lumi_doc.ts  lumi_footnotes.scss  lumi_footnotes.ts  lumi_references.scss  lumi_references.ts  lumi_section.scss  lumi_section.ts
frontend/src/components/lumi_image/: lumi_image.scss  lumi_image.ts
frontend/src/components/lumi_questions/: answer_item.scss  answer_item.ts  lumi_questions.scss  lumi_questions.ts
frontend/src/contexts/: scroll_context.ts
frontend/src/core/: core.ts
frontend/src/directives/: katex_directive.ts
frontend/src/pair-components/: button.scss  button.ts  circular_progress.ts  dialog.scss  dialog.ts  icon.scss  icon.ts  icon_button.scss  icon_button.ts  menu.scss  menu.ts  shared.scss  textarea.ts  textinput.ts  tooltip.ts  utils.ts
frontend/src/sass/: _colors.scss  _common.scss  _typescale.scss
frontend/src/services/: analytics.service.ts  api.service.ts  banner.service.ts  dialog.service.ts  document_state.service.ts  firebase.service.ts  floating_panel_service.ts  history.service.test.ts  history.service.ts  home.service.ts  initialization.service.ts  local_storage.service.ts  router.service.ts  settings.service.ts  snackbar.service.ts
frontend/src/shared/: answer_highlight_manager.test.ts  answer_highlight_manager.ts  answer_utils.test.ts  answer_utils.ts  api.ts  api_callables.ts  callables.ts  collapse_manager.test.ts  collapse_manager.ts  constants.ts  constants_helper_text.ts  highlight_manager.test.ts  highlight_manager.ts  history_collapse_manager.test.ts  history_collapse_manager.ts  lumi_doc.ts  lumi_doc_manager.test.ts  lumi_doc_manager.ts  lumi_doc_utils.test.ts  lumi_doc_utils.ts  lumi_paper_utils.test.ts  lumi_paper_utils.ts  lumi_summary_maps.ts  responsive_utils.ts  selection_utils.test.ts  selection_utils.ts  string_utils.test.ts  string_utils.ts  types.ts  types_local_storage.ts  utils.test.ts  utils.ts
frontend/src/stories/: README.md  circular_progress.stories.ts  lumi_doc.stories.ts  lumi_span.stories.ts  multi_icon_toggle.stories.ts  overflow_menu.stories.ts  paper_card.stories.ts  table_of_contents.stories.ts
(+38 files in other folders)
